--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,11 @@
+/**
+ * @name SheDiscord
+ * @version 0.0.1
+ * @description Um tema brasileira, criado por uma pessoa doida da cabeça.
+ * @author MinnaTheQueen
+ * @website https://github.com/MKIsHereOficial/SheDiscord_Theme
+*/
+
 :root {
     --bg-img: url('https://media.discordapp.net/attachments/852965720164794369/938500392822644806/7402bcc594a72844f62b8ac4a5342ece.gif?width=719&height=341');
 }
