feat: add topic suggestion bar

--- a/theme.css
+++ b/theme.css
@@ -167,6 +167,7 @@
 
 /* CHANNEL TEXT AREA */
 
+.threadSuggestionBar-3ExSyc,
 .replyBar-1oi75v,
 .channelTextArea-1FufC0 {
     background: transparent !important;
