refactor: change metadata description

--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,7 @@
 /**
  * @name SheDiscord
  * @version 0.0.1
- * @description Um tema brasileira, criado por uma pessoa doida da cabeça.
+ * @description Um tema brasileiro, para aqueles que curtem algo bem bonito.
  * @author MinnaTheQueen
  * @website https://github.com/MKIsHereOficial/SheDiscord_Theme
 */
